@@ -69,18 +69,11 @@ fi
 
 JAVA_MAJOR_VERSION=$($JAVA -version 2>&1 | sed -E -n 's/.* version "([0-9]*).*$/\1/p')
 if [[ "$JAVA_MAJOR_VERSION" -ge "9" ]]; then
-  JAVA_OPT="${JAVA_OPT} -Xlog:gc*:file=${LOG_PATH}/innospots_gc.log:time,tags:filecount=10,filesize=102400 -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC"
+  JAVA_OPT="${JAVA_OPT} -Xlog:gc*:file=${LOG_PATH}/innospots_gc.log:time,tags:filecount=10,filesize=102400"
 else
   JAVA_OPT="${JAVA_OPT} -Djava.ext.dirs=${JAVA_HOME}/jre/lib/ext:${JAVA_HOME}/lib/ext"
   JAVA_OPT="${JAVA_OPT} -Xloggc:${LOG_PATH}/gc.log -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M"
 fi
-
-
-JAVA_OPT="${JAVA_OPT} -XX:+ParallelRefProcEnabled"
-JAVA_OPT="${JAVA_OPT} -XX:+UseG1GC"
-JAVA_OPT="${JAVA_OPT} -XX:MaxGCPauseMillis=100"
-JAVA_OPT="${JAVA_OPT} -XX:+UseStringDeduplication"
-JAVA_OPT="${JAVA_OPT} -XX:+UseFastAccessorMethods"
 
 if [[ ${PROFILE} ]]; then
   JAVA_OPT="${JAVA_OPT} -Dspring.profiles.active=${PROFILE}"
